<resources>
    <string name="app_name">INews</string>
    <string name="dashboard">Dashboard</string>
    <string name="pilih_berita_nfavorit_anda">Pilih Berita \nFavorit Anda</string>
    <string name="sains">Sains</string>
    <string name="teknologi">Teknologi</string>
    <string name="hiburan">Hiburan</string>
    <string name="olahraga">Olahraga</string>
    <string name="kesehatan">Kesehatan</string>
    <string name="headline">Headline</string>
    <string name="show_all">Show All</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="todo">TODO</string>
    <string name="bisnis">Bisnis</string>
    <string name="kategori">Kategori</string>
    <string name="bookmark">Bookmark</string>
    <string name="akun">Akun</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>
    <string name="mode_gelap">Mode Gelap</string>
</resources>